--- a/style.css
+++ b/style.css
@@ -99,17 +99,67 @@
 }
 
 
+    #placar {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background-color: rgba(145, 141, 137, 0.7);
+        color: white;
+        padding: 3px;
+        border-radius: 8px;
+        font-size: 1rem;
+        text-align: left;
+    
+        opacity: 0.8; /* Transparência aplicada a toda a div */
+        transform: scale(0.7); /* 80% do tamanho original */
+        transform-origin: top right; /* mantém a posição no canto superior direito */
+
+
+    }
+
+
+
 
 @media (max-width: 480px) {
     /* Ajusta figuras, personagem e nova figura */
 
     #fundo {
         position: absolute;
+        top: 0;
+    left: 0;
+    width: 100vw; /* 100% da largura da viewport */
+    height: 80vh; /* 100% da altura da viewport */
+    background-color: black;
+    text-align: center;
+    color: aliceblue;
     }
 
-    
+    #instrucao {
+        font-size: 0.5em;
+    }
+    .painel {
+        position: absolute;
+        top: 90vh;
+        height: 20vh;
+        left: 10vw;
+        gap: 5px; /* Diminui o espaçamento no modo paisagem */
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+        
+    }
 
+    .painel button {
+        height: 10vw;
+    }
+
+    #placar {        
     
+        /* Reduzir o tamanho com escala */
+        transform: scale(0.4); /* 80% do tamanho original */
+    }
+
+      
 }
 
 /* Ajustes para dispositivos em modo horizontal (landscape) */
