--- a/style.css
+++ b/style.css
@@ -93,15 +93,11 @@
 /* Estilo para o painel de controle */
 .painel {
     position: absolute;
-    top: 55vh; /* Reduz a distância da parte inferior do #fundo */
+    top: 30vw;
     left: 10vw;
-    width: 20vw;
-    height: 20vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 2px;
+    text-align: center;
 }
+
 
     #placar {
         position: absolute;
@@ -146,7 +142,7 @@
             justify-content: center;
             font-weight: bold;
             border-radius: 5px; /* Bordas arredondadas */
-            margin-top: 10px;            
+            margin-top: 70px;            
         }
     
        
@@ -155,85 +151,82 @@
             position: relative; /* Para estar dentro do fluxo da div */
             width: 30%; /* 80% da largura da div fundo */
             margin-top: 200px; /* Espaço acima do placar */
-            font-size: 1rem;
+            font-size: 0.7rem;
             text-align: left;
         }
     
+        /* Painel ajustado */
         .painel {
-            top: 75vh; /* Ajuste o top para aproximar do fundo */
-            left: 10vw;
-            width: 70vw;
-            height: auto;
+            position: absolute;
+            top: 70vh; /* Logo abaixo do fundo */
+            left:10vw;            
+            width: 20vw;
+            height: 20vh;
             display: flex;
-            justify-content: center;
+            justify-content: space-evenly;
             align-items: center;
-            gap: 5px;
+            gap: 2px;
+            
         }
     
         /* Botões no painel */
         .painel button {
-            height: 10vw;
+            height: 15vw;
             width: 15vw;
             font-size: 0.9rem;
         }
 
         #div1 {
-            width: 10vw; /* Ajuste o tamanho do personagem */
-            height: 10vw; 
-            left: 30vw; /* Posicionamento adequado */
-            top: 10vw; /* Ajuste a posição conforme necessário */
+            width: 8vw; /* Ajusta o tamanho do personagem no modo horizontal */
+            height:10vw;   
+            left: 30vw;
         }
 
         #instrucao {
-            top: 2vw;
-            left: 15vw;
+            top: 15vw;
+            left: 10vw;
             font-size: 0.7rem; 
         }
     }
 
 
 
-    @media (orientation: landscape) {
-        #fundo {
-            width: 70vw; /* Ocupa 70% da largura da tela */
-            height: 90vh; /* Ajusta a altura para caber na tela */
-            left: 5vw; /* Centraliza horizontalmente */
-        }
-    
-        .painel {
-            position: absolute;
-            top: 55%; /* Centraliza verticalmente */
-            left: calc(5vw + 70vw + 2vw); /* Posiciona à direita do fundo com margem */
-            transform: translateY(-45%); /* Ajuste para centralização vertical */
-            width: 1vw; /* Define uma largura proporcional */
-            height: auto; /* Ajusta a altura ao conteúdo */
-            display: flex;
-            flex-direction: column; /* Botões em coluna */
-            justify-content: center;
-            align-items: center;
-            gap: 2px; /* Espaçamento entre os botões */
-        }
-    
-        .painel button {
-            padding: 1px;
-            font-size: 0.8rem;
-            width: 70%; /* Botões ocupam toda a largura do painel */
-            min-width: 30px; /* Tamanho mínimo para os botões */
-        }
-    
-        #instrucao {
-            left: 15vw;
-        }
-    
-           
-        #div1 {
-            width: 7vw; /* Ajusta o tamanho do personagem no modo horizontal */
-            height: 7vw;
-        }
-    
-        .figura {
-            width: 8vw; /* Ajusta o tamanho dos baús no modo horizontal */
-            height: 8vw;
-        }
+/* Ajustes para dispositivos em modo horizontal (landscape) */
+@media (orientation: landscape) {
+    #fundo {
+        width: 70vw; /* Ocupa 70% da largura da tela */
+        height: 90vh; /* Ajusta a altura para caber na tela */
+        left: 5vw; /* Centraliza horizontalmente */
     }
-    
+
+    .painel {
+        position: absolute;
+        top: 15vh;
+        left: 77vw;
+        gap: 5px; /* Diminui o espaçamento no modo paisagem */
+    }
+
+    .painel button {
+        padding: 5px;
+        font-size: 0.8rem;
+        min-width: 60px; /* Reduz o tamanho mínimo dos botões no modo paisagem */
+    }
+
+    #instrucao {
+        left: 15vw;
+    }
+
+    #mensagem {
+        
+    }
+
+    #div1 {
+        width: 7vw; /* Ajusta o tamanho do personagem no modo horizontal */
+        height: 7vw;
+    }
+
+    .figura {
+        width: 8vw; /* Ajusta o tamanho dos baús no modo horizontal */
+        height: 8vw;
+    }
+}
